--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve": "node -r dotenv/config build/server.js",
     "clean": "rimraf ./build",
     "build-ts": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit --detectOpenHandles --coverage --verbose"
   },
   "repository": {
     "type": "git",
@@ -31,15 +31,20 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
+    "supertest": "^6.1.5",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
